<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:background="@color/MainThemeColor4">

    <TextView
        android:id="@+id/characterFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characters"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="25sp"
        android:background="@color/MainThemeColor"/>

    <LinearLayout
        android:id="@+id/ll_character_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/filter_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_name"
            android:textSize="20sp"
            android:background="@color/MainThemeColor3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/filter_by_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_gender"
            android:textSize="20sp"
            android:background="@color/MainThemeColor3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/LocationFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locations"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:textSize="25sp"
        android:background="@color/MainThemeColor"/>

    <LinearLayout
        android:id="@+id/ll_locations_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/filter_location_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_name"
            android:textSize="20sp"
            android:background="@color/MainThemeColor3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/filter_location_by_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_dimension"
            android:textSize="20sp"
            android:background="@color/MainThemeColor3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/filter_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/episodes"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="25sp"
        android:background="@color/MainThemeColor"/>



</LinearLayout>