<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="?attr/selectableItemBackground"
    tools:background="@color/MainThemeColor4"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/episodeId"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray2.0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1-" />

    <LinearLayout
        android:layout_width="0dp"
        android:background="#00000000"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/episodeId"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="20sp"
                android:textColor="@color/gray2.0"
                android:text="@string/name" />

            <TextView
                android:id="@+id/EpisodeName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/gray2.0"
                tools:text="Pilot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="20sp"
                android:textColor="@color/gray2.0"
                android:text="@string/Air_date" />

            <TextView
                android:id="@+id/air_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/gray2.0"
                tools:text="December 2, 2013" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="20sp"
                android:textColor="@color/gray2.0"
                android:text="@string/episode" />

            <TextView
                android:id="@+id/episode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="20sp"
                android:textColor="@color/gray2.0"
                android:maxLines="1"
                tools:text="S01E01" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>